test husky hook

--- a/public/conclavedashboard25.html
+++ b/public/conclavedashboard25.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>FANTAEUROVISION25 - Dashboard Admin</title>
+  <title>FANTAFCWC - Dashboard Admin</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,800;1,800&family=Barlow+Condensed:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/mobile.css">
@@ -122,7 +122,7 @@
     <header class="header">
       <div class="user-profile">
         <div class="user-info">
-          <div class="user-name">FANTAEUROVISION25 ADMIN</div>
+          <div class="user-name">FANTAFCWC ADMIN</div>
         </div>
       </div>
       <div class="teex-balance">
@@ -133,7 +133,7 @@
   </div>
   
   <div class="dashboard-container">
-    <h1 class="dashboard-title">FANTAEUROVISION25</h1>
+    <h1 class="dashboard-title">FANTAFCWC</h1>
     <p class="dashboard-subtitle">Pannello di Amministrazione</p>
     
     <div class="admin-card" onclick="window.location.href='quotazioni.html'">
@@ -144,7 +144,7 @@
         <h2 class="admin-card-title">Upload Quotazioni</h2>
       </div>
       <p class="admin-card-description">
-        Carica e gestisci le quotazioni dei giocatori per il FANTAEUROVISION25.
+        Carica e gestisci le quotazioni dei giocatori per il FANTAFCWC.
       </p>
       <div class="admin-card-button">Accedi</div>
     </div>
@@ -170,12 +170,12 @@
         <h2 class="admin-card-title">Upload Extra</h2>
       </div>
       <p class="admin-card-description">
-        Gestisci contenuti extra e funzionalità aggiuntive per il FANTAEUROVISION25.
+        Gestisci contenuti extra e funzionalità aggiuntive per il FANTAFCWC.
       </p>
       <div class="admin-card-button">Accedi</div>
     </div>
     
-    <p class="footer-info">FANTAEUROVISION25 Admin Dashboard v2.5 - Server: fcserver.js</p>
+    <p class="footer-info">FANTAFCWC Admin Dashboard v2.5 - Server: fcserver.js</p>
   </div>
   
   <script>
