--- a/public/index.html
+++ b/public/index.html
@@ -7,26 +7,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
  <!-- SEO Base -->
- <meta name="description" content="FANTAEUROVISION25 è il fantasy game più musicale del web. Scegli i tuoi artisti preferiti, sfida altri fan e scala la classifica a suon di voti!">
- <meta name="keywords" content="fantasy game, Eurovision, artisti, musica, SWISSHEARTS, FANTAEUROVISION25, sfide, voti, gioco gratuito, classifica">
- <meta name="author" content="FANTAEUROVISION25 Team">
+ <meta name="description" content="FANTAFCWC è il fantasy game più musicale del web. Scegli i tuoi artisti preferiti, sfida altri fan e scala la classifica a suon di voti!">
+ <meta name="keywords" content="fantasy game, Eurovision, artisti, musica, SWISSHEARTS, FANTAFCWC, sfide, voti, gioco gratuito, classifica">
+ <meta name="author" content="FANTAFCWC Team">
  
 
 <!-- Open Graph per condivisione social -->
-<meta property="og:title" content="FANTAEUROVISION25 - Il fantasy game dell'Eurovision 25">
+<meta property="og:title" content="FANTAFCWC - Il fantasy game dell'Eurovision 25">
 <meta property="og:description" content="Sfida altri fedeli, guadagna SWISSHEARTS e conquista il trono. Habemus Magnum Victorem!">
-<meta property="og:image" content="https://fantaeurovision25/icons/sh.png"> 
-<meta property="og:url" content="https://fantaeurovision25/">
+<meta property="og:image" content="https://FANTAFCWC/icons/sh.png"> 
+<meta property="og:url" content="https://FANTAFCWC/">
 <meta property="og:type" content="website">
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="FANTAEUROVISION25 - Il fantasy game del conclave">
+<meta name="twitter:title" content="FANTAFCWC - Il fantasy game del conclave">
 <meta name="twitter:description" content="Sfida altri fedeli, crea la tua squadra di ARTISTS e vinci!">
-<meta name="twitter:image" content="https://fantaeurovision25/icons/sh.png">
+<meta name="twitter:image" content="https://FANTAFCWC/icons/sh.png">
 
  
-  <title>FANTAEUROVISION25 - Home</title>
+  <title>FANTAFCWC - Home</title>
   <link rel="stylesheet" href="css/mobile.css">
   <link rel="stylesheet" href="css/mobile2.css">
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@700&family=Montserrat&display=swap" rel="stylesheet">
@@ -126,7 +126,7 @@
 <body>
   <div class="logo-text">FANTA</div>
   <div class="logo-image">
-    <img src="images/logo.png" alt="Logo FANTAEUROVISION25" style="display: block; max-width: 200px; margin: 0 auto 20px auto;">
+    <img src="images/logo.png" alt="Logo FANTAFCWC" style="display: block; max-width: 200px; margin: 0 auto 20px auto;">
   </div>
 
   <div class="intro">
@@ -159,7 +159,7 @@
   </div>
 
   <div class="footer">
-    <p>© 2025 fantaeurovision25 - Per info: <a href="mailto:fantaeurovision25@gmail.com">fantaeurovision25@gmail.com</a></p>
+    <p>© 2025 FANTAFCWC - Per info: <a href="mailto:FANTAFCWC@gmail.com">FANTAFCWC@gmail.com</a></p>
   </div>
 </body>
 </html>
