--- a/public/index_land.html
+++ b/public/index_land.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FANTAEUROVISION25 - Prossimamente</title>
+  <title>FANTAFCWC - Prossimamente</title>
   <!-- Fonts & AOS -->
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
@@ -129,7 +129,7 @@
   <!-- Hero -->
   <header class="hero" data-aos="fade-in">
     <div class="hero-content" data-aos="zoom-in" data-aos-delay="200">
-      <h1>fantaeurovision25</h1>
+      <h1>FANTAFCWC</h1>
       <p>Ci siamo ! Indovina la fumata bianca e vinci i tuoi Papa Coins!</p>
       <div class="countdown" id="countdown" data-aos="fade-up" data-aos-delay="400">
         <div><span id="days">5</span><br>Giorni</div>
@@ -163,7 +163,7 @@
     <h2 class="section-title">Fumata Bianca</h2>
     <div class="section-content">
       <img src="web/fuma.jpg" alt="Fumata Bianca">
-      <p>Preparati a festeggiare: la fumata bianca segner&agrave; il nuovo Papa e decreter&agrave; i vincitori del FANTAEUROVISION25.</p>
+      <p>Preparati a festeggiare: la fumata bianca segner&agrave; il nuovo Papa e decreter&agrave; i vincitori del FANTAFCWC.</p>
     </div>
   </section>
 
@@ -178,7 +178,7 @@
 
   <!-- Footer -->
   <footer data-aos="fade-in">
-    &copy; 2025 fantaeurovision25 - Tutti i diritti riservati
+    &copy; 2025 FANTAFCWC - Tutti i diritti riservati
   </footer>
 
   <!-- Scripts -->
