--- a/public/index_simple.html
+++ b/public/index_simple.html
@@ -7,7 +7,7 @@
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FANTAEUROVISION25 - Home</title>
+  <title>FANTAFCWC - Home</title>
   <!-- Importa le librerie Firebase in modalità compat -->
   <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-auth-compat.js"></script>
@@ -85,7 +85,7 @@
 </head>
 <body>
   <div class="logo">
-    <div class="logo-text">FANTAEUROVISION25</div>
+    <div class="logo-text">FANTAFCWC</div>
   </div>
   
   <!-- Add error message container -->
@@ -114,7 +114,7 @@
   
   <div class="terms">
     by signing in, you agree with the <a href="terms.html" target="_blank">Terms & Conditions</a>
-    <br><br>© 2025 fantaeurovision25 All rights reserved. <a href="mailto:fantaeurovision25@gmail.com">fantaeurovision25@gmail.com</a>
+    <br><br>© 2025 FANTAFCWC All rights reserved. <a href="mailto:FANTAFCWC@gmail.com">FANTAFCWC@gmail.com</a>
 </div>
   
   <!-- Includi il file auth.js, che contiene la configurazione Firebase -->
