--- a/public/login.html
+++ b/public/login.html
@@ -6,7 +6,7 @@
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FANTAEUROVISION25 - Login</title>
+  <title>FANTAFCWC - Login</title>
   <!-- Importa le librerie Firebase in modalità compat -->
   <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-auth-compat.js"></script>
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div class="form-container">
-    <h2 class="form-title">Join FANTAEUROVISION25</h2>
+    <h2 class="form-title">Join FANTAFCWC</h2>
     <button class="close-button" onclick="window.location.href='index.html'">×</button>
     
     <form id="loginForm">
