--- a/public/privacy.html
+++ b/public/privacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy - FANTAEUROVISION25</title>
+  <title>Privacy - FANTAFCWC</title>
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
@@ -38,7 +38,7 @@
 
   <div class="section">
     <h2>1. Introduzione</h2>
-    <p>Questa informativa descrive come FANTAEUROVISION25 raccoglie, utilizza e protegge i tuoi dati personali quando usi la nostra piattaforma per giocare al fantasy game ispirato all’Eurovision Song Contest.</p>
+    <p>Questa informativa descrive come FANTAFCWC raccoglie, utilizza e protegge i tuoi dati personali quando usi la nostra piattaforma per giocare al fantasy game ispirato all’Eurovision Song Contest.</p>
   </div>
 
   <div class="section">
@@ -101,7 +101,7 @@
 
   <div class="section">
     <h2>9. Contatti</h2>
-    <p>Per qualsiasi richiesta o chiarimento sulla gestione dei tuoi dati, puoi contattare il nostro team all’indirizzo: <a href="mailto:fantaeurovision25@gmail.com">fantaeurovision25@gmail.com</a></p>
+    <p>Per qualsiasi richiesta o chiarimento sulla gestione dei tuoi dati, puoi contattare il nostro team all’indirizzo: <a href="mailto:FANTAFCWC@gmail.com">FANTAFCWC@gmail.com</a></p>
   </div>
 
   <div class="section">
@@ -125,8 +125,8 @@
   </div>
 
   <div class="section">
-    <p><strong>FANTAEUROVISION25 – Tutti i diritti riservati</strong></p>
-    <p>Hai un’idea per un fantasy musicale? Scrivici a <a href="mailto:fantaeurovision25@gmail.com">fantaeurovision25@gmail.com</a></p>
+    <p><strong>FANTAFCWC – Tutti i diritti riservati</strong></p>
+    <p>Hai un’idea per un fantasy musicale? Scrivici a <a href="mailto:FANTAFCWC@gmail.com">FANTAFCWC@gmail.com</a></p>
     <p><em>Privacy, musica e rispetto. Sempre. 🎶</em></p>
   </div>
 </body>
