--- a/public/rules.html
+++ b/public/rules.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Regole - FANTAEUROVISION25</title>
+  <title>Regole - FANTAFCWC</title>
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
@@ -30,7 +30,7 @@
   </style>
 </head>
 <body>
-  <h1>Regole di FANTAEUROVISION25</h1>
+  <h1>Regole di FANTAFCWC</h1>
 
   <div class="section">
     <h2>Pronti a scatenare la vostra playlist?</h2>
@@ -48,7 +48,7 @@
 
   <div class="section">
     <h2>1. Introduzione</h2>
-    <p>Benvenuto su FANTAEUROVISION25! Questo è il tuo regolamento ufficiale. Leggilo con attenzione e poi corri a fare la tua squadra: il palco ti aspetta!</p>
+    <p>Benvenuto su FANTAFCWC! Questo è il tuo regolamento ufficiale. Leggilo con attenzione e poi corri a fare la tua squadra: il palco ti aspetta!</p>
   </div>
 
   <div class="section">
@@ -129,8 +129,8 @@
   </div>
 
   <div class="section">
-    <p><strong>FANTAEUROVISION25 – Tutti i diritti riservati</strong></p>
-    <p>Per dubbi, suggerimenti o collaborazioni scrivici a <a href="mailto:fantaeurovision25@gmail.com">fantaeurovision25@gmail.com</a></p>
+    <p><strong>FANTAFCWC – Tutti i diritti riservati</strong></p>
+    <p>Per dubbi, suggerimenti o collaborazioni scrivici a <a href="mailto:FANTAFCWC@gmail.com">FANTAFCWC@gmail.com</a></p>
     <p><em>Che vinca la musica, sempre 🎤</em></p>
   </div>
 </body>
