--- a/public/sign.html
+++ b/public/sign.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FANTAEUROVISION25 - Home</title>
+  <title>FANTAFCWC - Home</title>
   <!-- Importa le librerie Firebase in modalità compat -->
   <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-auth-compat.js"></script>
@@ -84,7 +84,7 @@
 </head>
 <body>
   <div class="logo">
-    <div class="logo-text">FANTAEUROVISION25</div>
+    <div class="logo-text">FANTAFCWC</div>
   </div>
   
   <!-- Add error message container -->
