--- a/public/signin.html
+++ b/public/signin.html
@@ -7,7 +7,7 @@
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FANTAEUROVISION25 - Home</title>
+  <title>FANTAFCWC - Home</title>
   <!-- Importa le librerie Firebase in modalità compat -->
   <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-auth-compat.js"></script>
@@ -86,7 +86,7 @@
 <body>
   <div class="logo-text">FANTA</div>
   <div class="logo-image">
-    <img src="images/logo.png" alt="Logo FANTAEUROVISION25" style="display: block; max-width: 200px; margin: 0 auto 20px auto;">
+    <img src="images/logo.png" alt="Logo FANTAFCWC" style="display: block; max-width: 200px; margin: 0 auto 20px auto;">
   </div>
   
   <!-- Add error message container -->
@@ -115,7 +115,7 @@
   
   <div class="terms">
     by signing in, you agree with the <a href="terms.html" target="_blank">Terms & Conditions</a>
-    <br><br>© 2025 fantaeurovision25 All rights reserved. <a href="mailto:fantaeurovision25@gmail.com">fantaeurovision25@gmail.com</a>
+    <br><br>© 2025 FANTAFCWC All rights reserved. <a href="mailto:FANTAFCWC@gmail.com">FANTAFCWC@gmail.com</a>
 </div>
   
   <!-- Includi il file auth.js, che contiene la configurazione Firebase -->
