--- a/public/terms.html
+++ b/public/terms.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Termini e Condizioni - FANTAEUROVISION25</title>
+  <title>Termini e Condizioni - FANTAFCWC</title>
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
@@ -39,22 +39,22 @@
 
   <div class="section">
     <h2>1. Accettazione dei Termini</h2>
-    <p>Utilizzando FANTAEUROVISION25, accetti i presenti Termini e Condizioni. Se non sei d’accordo con questi termini, ti invitiamo a non utilizzare la piattaforma.</p>
+    <p>Utilizzando FANTAFCWC, accetti i presenti Termini e Condizioni. Se non sei d’accordo con questi termini, ti invitiamo a non utilizzare la piattaforma.</p>
   </div>
 
   <div class="section">
     <h2>2. Descrizione del Servizio</h2>
-    <p>FANTAEUROVISION25 è un fantasy game amatoriale ispirato al mondo dell’Eurovision Song Contest. Gli utenti possono creare una squadra di artisti e guadagnare punti in base ai voti reali ottenuti durante la competizione. Il tutto è svolto esclusivamente per finalità di intrattenimento, senza alcuno scopo di lucro.</p>
+    <p>FANTAFCWC è un fantasy game amatoriale ispirato al mondo dell’Eurovision Song Contest. Gli utenti possono creare una squadra di artisti e guadagnare punti in base ai voti reali ottenuti durante la competizione. Il tutto è svolto esclusivamente per finalità di intrattenimento, senza alcuno scopo di lucro.</p>
   </div>
 
   <div class="section">
     <h2>3. Registrazione e Account</h2>
-    <p>Per partecipare a FANTAEUROVISION25, è necessario registrarsi e creare un account. Ogni utente è responsabile della sicurezza delle proprie credenziali e delle attività svolte tramite il proprio profilo.</p>
+    <p>Per partecipare a FANTAFCWC, è necessario registrarsi e creare un account. Ogni utente è responsabile della sicurezza delle proprie credenziali e delle attività svolte tramite il proprio profilo.</p>
   </div>
 
   <div class="section">
     <h2>4. Condotta dell'Utente</h2>
-    <p>Utilizzando FANTAEUROVISION25, ti impegni a:</p>
+    <p>Utilizzando FANTAFCWC, ti impegni a:</p>
     <ul>
       <li>Non violare leggi o regolamenti vigenti</li>
       <li>Non interferire con il corretto funzionamento della piattaforma</li>
@@ -65,17 +65,17 @@
 
   <div class="section">
     <h2>5. Proprietà Intellettuale</h2>
-    <p>I contenuti originali presenti su FANTAEUROVISION25 (testi, grafiche, logiche di gioco) sono di proprietà della piattaforma o concessi in uso dai rispettivi titolari. I loghi e i materiali ufficiali dell’Eurovision Song Contest sono di proprietà dell’European Broadcasting Union (EBU) e vengono utilizzati a scopo descrittivo e nel rispetto del fair use, senza alcuna intenzione di violarne i diritti o di confondere l’utente.</p>
+    <p>I contenuti originali presenti su FANTAFCWC (testi, grafiche, logiche di gioco) sono di proprietà della piattaforma o concessi in uso dai rispettivi titolari. I loghi e i materiali ufficiali dell’Eurovision Song Contest sono di proprietà dell’European Broadcasting Union (EBU) e vengono utilizzati a scopo descrittivo e nel rispetto del fair use, senza alcuna intenzione di violarne i diritti o di confondere l’utente.</p>
   </div>
 
   <div class="section">
     <h2>6. Gioco Gratuito e Finalità</h2>
-    <p>FANTAEUROVISION25 è totalmente gratuito e non prevede costi, premi in denaro o forme di scommessa. Ogni attività ha come unico scopo il divertimento e la partecipazione entusiasta alla gara canora più iconica d’Europa.</p>
+    <p>FANTAFCWC è totalmente gratuito e non prevede costi, premi in denaro o forme di scommessa. Ogni attività ha come unico scopo il divertimento e la partecipazione entusiasta alla gara canora più iconica d’Europa.</p>
   </div>
 
   <div class="section">
     <h2>7. Limitazione di Responsabilità</h2>
-    <p>FANTAEUROVISION25 non è responsabile per eventuali danni diretti o indiretti derivanti dall’uso della piattaforma, da malfunzionamenti tecnici o da errori nel calcolo dei punteggi.</p>
+    <p>FANTAFCWC non è responsabile per eventuali danni diretti o indiretti derivanti dall’uso della piattaforma, da malfunzionamenti tecnici o da errori nel calcolo dei punteggi.</p>
   </div>
 
   <div class="section">
@@ -90,17 +90,17 @@
 
   <div class="section">
     <h2>10. Contatti</h2>
-    <p>Per qualunque chiarimento o comunicazione, puoi scriverci all’indirizzo: <a href="mailto:fantaeurovision25@gmail.com">fantaeurovision25@gmail.com</a></p>
+    <p>Per qualunque chiarimento o comunicazione, puoi scriverci all’indirizzo: <a href="mailto:FANTAFCWC@gmail.com">FANTAFCWC@gmail.com</a></p>
   </div>
 
   <div class="section">
     <h2>11. Collaborazione e Trasparenza</h2>
-    <p>FANTAEUROVISION25 non è affiliato, sponsorizzato o riconosciuto ufficialmente dall’European Broadcasting Union (EBU) o da altri enti legati all’Eurovision Song Contest. Ogni riferimento al brand “Eurovision” è puramente descrittivo e celebrativo. Nessuna intenzione competitiva o commerciale è alla base del progetto.</p>
-    <p>Se l’organizzazione ufficiale desidera mettersi in contatto con noi per eventuali collaborazioni, siamo entusiasti all’idea: <a href="mailto:fantaeurovision25@gmail.com">fantaeurovision25@gmail.com</a></p>
+    <p>FANTAFCWC non è affiliato, sponsorizzato o riconosciuto ufficialmente dall’European Broadcasting Union (EBU) o da altri enti legati all’Eurovision Song Contest. Ogni riferimento al brand “Eurovision” è puramente descrittivo e celebrativo. Nessuna intenzione competitiva o commerciale è alla base del progetto.</p>
+    <p>Se l’organizzazione ufficiale desidera mettersi in contatto con noi per eventuali collaborazioni, siamo entusiasti all’idea: <a href="mailto:FANTAFCWC@gmail.com">FANTAFCWC@gmail.com</a></p>
   </div>
 
   <div class="section">
-    <p><strong>FANTAEUROVISION25 – Tutti i diritti riservati</strong></p>
+    <p><strong>FANTAFCWC – Tutti i diritti riservati</strong></p>
     <p>Se vuoi creare il tuo fantasy personalizzato o hai un’idea da proporre, contattaci. Ci piace dare voce alla creatività (in ogni lingua). 🎤</p>
     <p><em>Che vinca la musica, sempre.</em></p>
   </div>
