--- a/public/login.html
+++ b/public/login.html
@@ -59,7 +59,7 @@
   </div>
   
   <!-- Includi il file auth.js, che contiene la logica per la login -->
-  <script src="auth.js"></script>
+  <script src="js/auth.js"></script>
   
   <!-- Script per la gestione del recupero password -->
   <script>
