--- a/public/register.html
+++ b/public/register.html
@@ -53,7 +53,7 @@
   </div>
   
   <!-- Includi il file auth.js, che contiene la logica -->
-  <script src="auth.js"></script>
+  <script src="js/auth.js"></script>
 </body>
 </html>
 <style>
