--- a/public/riassunto.html
+++ b/public/riassunto.html
@@ -154,7 +154,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     
     <!-- Carica auth.js DOPO aver caricato Firebase -->
-    <script src="js/auth.js"></script>
+    <script type="module" src="js/auth/index.js"></script>
 </head>
 <body>
   <header class="header">
