--- a/public/sign.html
+++ b/public/sign.html
@@ -116,7 +116,7 @@
   </div>
   
   <!-- Includi il file auth.js, che contiene la configurazione Firebase -->
-  <script src="js/auth.js"></script>
+  <script type="module" src="js/auth/index.js"></script>
   <script>
   // Chiave segreta per i JWT (meglio metterla in .env)
   const JWT_SECRET = 'chiave_segreta_molto_sicura';
