--- a/public/signin.html
+++ b/public/signin.html
@@ -120,7 +120,7 @@
   
   <!-- Includi il file auth.js, che contiene la configurazione Firebase -->
 <script src="/api/firebase-config" type="module"></script>
-<script src="js/auth.js"></script>
+<script type="module" src="js/auth/index.js"></script>
 
   <script>
   // Chiave segreta per i JWT (meglio metterla in .env)
