--- a/public/user-landing.html
+++ b/public/user-landing.html
@@ -703,7 +703,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-  <script src="js/auth.js"></script>
+  <script type="module" src="js/auth/index.js"></script>
   
   <script>
     // ... existing code ...
