--- a/public/index.html
+++ b/public/index.html
@@ -155,7 +155,7 @@
 
   <div class="buttons">
     <button class="btn btn-yellow" onclick="window.location.href='register.html'">REGISTRATI</button>
-    <button class="btn btn-outline-yellow" onclick="window.location.href='signin.html'">ACCEDI</button>
+    <button class="btn btn-outline-yellow" onclick="window.location.href='/signin.html'">ACCEDI</button>
   </div>
 
   <div class="footer">
