select-opponet_final_ok

--- a/public/select-opponent.html
+++ b/public/select-opponent.html
@@ -42,7 +42,7 @@
   <!-- Sort header -->
   <div class="sort-header-user">
     <div class="sort-item" data-sort="username">USERNAME</div>
-    <div class="sort-item active" data-sort="teex_balance">
+    <div class="sort-item active" data-sort="balance">
       <img src="icons/sh.png" alt="PPC" class="sort-ppc-icon">
       SWISSHEARTS
       <div class="sort-triangle desc"></div>
