--- a/public/conclavedashboard25.html
+++ b/public/conclavedashboard25.html
@@ -22,7 +22,7 @@
       font-family: 'Barlow Condensed', sans-serif;
       font-size: 36px;
       font-weight: 700;
-      color: #0bdad7;
+      color: #F1BE48;
       text-transform: uppercase;
       margin-bottom: 30px;
       text-align: center;
@@ -62,7 +62,7 @@
       width: 50px;
       height: 50px;
       border-radius: 50%;
-      background-color: #ed2224;
+      background-color: #F1BE48;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -91,7 +91,7 @@
     
     .admin-card-button {
       background-color: #2a2b2a;
-      border: 2px solid #ed2224;
+      border: 2px solid #F1BE48;
       border-radius: 20px;
       padding: 8px 16px;
       font-family: 'Barlow Condensed', sans-serif;
