--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="FANTAFCWC - Il fantasy game del conclave">
-<meta name="twitter:description" content="Sfida altri fedeli, crea la tua squadra di ARTISTS e vinci!">
+<meta name="twitter:description" content="Sfida altri fedeli, crea la tua squadra di PLAYERS e vinci!">
 <meta name="twitter:image" content="https://FANTAFCWC/icons/sh.png">
 
  
@@ -56,7 +56,7 @@
       font-family: 'Barlow Condensed', sans-serif;
       font-weight: 700;
       font-size: 48px;
-      color: #0bdad7;
+      color: #F1BE48;
       margin: 0px 0;
       text-align: center;
     }
@@ -68,7 +68,7 @@
     h2 {
       font-family: 'Barlow Condensed', sans-serif;
       font-weight: 700;
-      color: #0bdad7;
+      color: #F1BE48;
       margin-bottom: 10px;
       text-transform: uppercase;
     }
@@ -105,16 +105,16 @@
       min-width: 300px;
     }
     .btn-yellow {
-      background-color: #0bdad7;
+      background-color: #F1BE48;
       color: #333;
     }
     .btn-outline-yellow {
-      border: 2px solid #0bdad7;
-      color: #0bdad7;
+      border: 2px solid #F1BE48;
+      color: #F1BE48;
       background: transparent;
     }
     a {
-      color: #0bdad7;
+      color: #F1BE48;
       text-decoration: underline;
     }
     .footer {
