--- a/public/modals/terms.html
+++ b/public/modals/terms.html
@@ -15,11 +15,11 @@
     h1 {
 
       color: #0A0034;
-      border-bottom: 2px solid #ed2224;
+      border-bottom: 2px solid #F1BE48;
       padding-bottom: 10px;
     }
     h2 {
-      color: #ed2224;
+      color: #F1BE48;
       margin-top: 20px;
     }
     p {
@@ -29,7 +29,7 @@
       margin-bottom: 30px;
     }
     a {
-      color: #ed2224;
+      color: #F1BE48;
       text-decoration: none;
     }
   </style>
