--- a/public/secure-prototype.html
+++ b/public/secure-prototype.html
@@ -57,13 +57,13 @@
       border: none;
       cursor: pointer;
       transition: all 0.3s ease;
-      background-color: #0bdad7;
+      background-color: #F1BE48;
       color: #333;
       margin-top: 20px;
     }
     
     .btn:hover {
-      background-color: #ed2224;
+      background-color: #F1BE48;
       color: white;
     }
   </style>
