--- a/public/_legacy_scegli-opponent.html
+++ b/public/_legacy_scegli-opponent.html
@@ -16,7 +16,7 @@
     .ppc-value {
       font-family: 'Montserrat', sans-serif;
       font-weight: 800;
-      color: #0bdad7;
+      color: #F1BE48;
       font-size: 14px;
       display: flex;
       align-items: center;
@@ -35,7 +35,7 @@
       width: 80%;
       margin: 20px auto;
       padding: 12px;
-      background-color: #131313;
+      background-color: #282727;
       color: white;
       border: none;
       border-radius: 24px;
