--- a/public/contest-creation.html
+++ b/public/contest-creation.html
@@ -31,7 +31,7 @@
   </div>
   <div class="budget-bar">
     <img src="icons/sh.png" alt="Teex" class="teex-left-icon">
-    <span id="teexLeft"><span class="teex-left-text-cyan">10.0</span> <span class="teex-left-text-white">SwissHearts left</span></span>
+    <span id="teexLeft"><span class="teex-left-text-cyan">10.0</span> <span class="teex-left-text-white">Clubby left</span></span>
   </div>
   <div id="messaggio" style="display: none;"></div>
   <div id="userNameDiv" style="display: none;"></div>
@@ -47,7 +47,7 @@
   <div class="fab-background"></div>
   <div id="addPlayerBtn" class="fab_button" style="position: fixed; bottom: 96px; left: 50%; transform: translateX(-50%); display: flex; align-items: center; justify-content: center; z-index: 101; box-shadow: 0 4px 8px rgba(0,0,0,0.3);">
     <img src="icons/add.png" alt="Add Player" style="width: 24px; height: 24px; margin-right: 8px;">
-    <span style="color: #ffffff;">ADD ARTISTS</span>
+    <span style="color: #000000;">ADD PLAYERS</span>
   </div>
   <footer class="footer-nav" style="justify-content: flex-end;">
     <button id="resetTeamBtn" class="footer_button footer_button_light" disabled>RESET TEAM</button>
