--- a/public/modals/rules.html
+++ b/public/modals/rules.html
@@ -13,12 +13,12 @@
       background-color: #f5f5f5;
     }
     h1 {
-      color: #131313;
-      border-bottom: 2px solid #ed2224;
+      color: #282727;
+      border-bottom: 2px solid #F1BE48;
       padding-bottom: 10px;
     }
     h2 {
-      color: #ed2224;
+      color: #F1BE48;
       margin-top: 20px;
     }
     p {
