--- a/public/signin.html
+++ b/public/signin.html
@@ -41,7 +41,7 @@
       font-family: 'Barlow Condensed', sans-serif;
       font-weight: 700;
       font-size: 48px;
-      color: #0bdad7; 
+      color: #F1BE48; 
       letter-spacing: 1px;
       text-transform: uppercase;
     }
