--- a/public/user-landing.html
+++ b/public/user-landing.html
@@ -42,7 +42,7 @@
     <div class="fab-background"></div>
     <div id="playButton" class="fab_button">
       <img src="icons/add.png" alt="New Game" style="width: 24px; height: 24px; margin-right: 8px;">
-      <span style="color: #ffffff;">NEW GAME</span>
+      <span style="color: #000000;">NEW GAME</span>
     </div>
 
   <div id="modal" class="hidden">
